--- a/extension/popup.html
+++ b/extension/popup.html
@@ -162,6 +162,10 @@
   </div>
 </div>
 
+  <div style="position:fixed; right:10px; bottom:0px; color:gray; z-index:10;">
+      <p>powered by APS.or.kr</p>
+  </div>
+
 </body>
 
 </html>
