--- a/extension/popup.html
+++ b/extension/popup.html
@@ -163,7 +163,7 @@
 </div>
 
   <div style="position:fixed; right:10px; bottom:0px; color:gray; z-index:10;">
-      <p>powered by APS.or.kr</p>
+      <p>powered by aps.or.kr</p>
   </div>
 
 </body>
