--- a/extension/popup.html
+++ b/extension/popup.html
@@ -7,8 +7,6 @@
     <link rel="stylesheet" href="static/bootstrap.min.css">
     <script src="static/jquery.min.js"></script>
     <script src="static/bootstrap.bundle.min.js"></script>
-    <!--<script src="static/jquery-ui.js"></script>
-    <script src="static/jquery-ui.css"></script>-->
     <script src="popup.js"></script>
 </head>
 
@@ -22,11 +20,11 @@
     .tab {
       overflow: hidden;
       border: 1px solid #ccc;
-      background-color: #f1f1f1;
+      background-color: white;
     }
 
     .tab button {
-      background-color: inherit;
+      background-color: #e7e7e7;
       float: left;
       border: none;
       outline: none;
