--- a/extension/popup.html
+++ b/extension/popup.html
@@ -293,7 +293,7 @@
 </div>
 
   <div id="footer">
-      <p>powered by extextcloud.com(aws)</p>
+      <p>powered by extextcloud.com(NCloud)</p>
   </div>
 
 </body>
